--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 </section>
 
 		<section>
-                    <p> \(H=\mathcal{H}_0+\frac{1}{2}\kappa
-                    \sum_{m,n}\left[(m-m_0)^{2}+(n-n_0)^{2}\right]\hat{a}_{m,n}^{\dagger}\hat{a}_{m,n}\)
-                    </p>
+                    $H=\mathcal{H}_0+\frac{1}{2}\kappa
+                    \sum_{m,n}\left[(m-m_0)^{2}+(n-n_0)^{2}\right]\hat{a}_{m,n}^{\dagger}\hat{a}_{m,n}$
+
                 </section>
 
                     
