Added 3D OPO slide

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
                     <img data-src="./images/diff.svg">
                 </section>
 
+                <section>
+                    <img data-src="./images/opobox.svg">
+                </section>
+                
                 
 		<section>
                     $H=\mathcal{H}_0+\frac{1}{2}\kappa
