Added polaritonic edge mode video.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 		    </p>
 		</section>
 
+		<section>
+                    <video width="960" height="480" controls>
+                        <source data-src="./videos/edge_mode.webm" type="video/webm">
+                        <source data-src="./videos/edge_mode.mp4" type="video/mp4"/>
+                        I'm sorry; your browser doesn't support HTML5 video in WebM with VP8 or MP4 with H.264.
+                    </video>
+                </section>
 
 		<section>
                     <img data-src="./images/alberto.png">
