Added Ch.2 figures.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,28 @@
                     </video>
                 </section>
 
+                <section>
+                    <img data-src="./images/fig_up_lp.svg">
+                </section>
+
+                <section>
+                    <img data-src="./images/fig_bistable.svg">
+                </section>
+
+                <section>
+                    <img data-src="./images/fig_satellites_ks_0_000.svg">
+                </section>
+
+                <section>
+                    <img data-src="./images/fig_response_sp_ks_0_000.svg">
+                </section>
+
+                <section>
+                    <img data-src="./images/fig_response_ev_ks_0_000.svg">
+                </section>
+
+                
+
 		<section>
                     <img data-src="./images/alberto.png">
                 </section>
