Included slides from opo-extra.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,99 @@
 		</section>
 
 		<section>
-                    <video width="960" height="480" controls>
+                    <video width="800" height="400" controls loop>
                         <source data-src="./videos/edge_mode.webm" type="video/webm">
                         <source data-src="./videos/edge_mode.mp4" type="video/mp4"/>
                         I'm sorry; your browser doesn't support HTML5 video in WebM with VP8 or MP4 with H.264.
                     </video>
                 </section>
+
+
+		<section>Types of instabilities</section>
+
+		<section>
+		    <section>Low pump powers</section>
+		    <section>
+		        <img width="416" height="402" src="./images/stab_1.png" alt="stab_1.png" />
+                        <video width="479" height="600" controls loop>
+                            <source data-src="./videos/spect_1.webm" type="video/webm">
+                            I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+                        </video>
+		    </section>
+		</section>
+
+                <section>
+		    <section>High pump powers</section>
+		    <section>
+		        <img width="250" height="241" src="./images/stab_2.png" alt="stab_2.png" />
+                        <video width="479" height="600" controls loop>
+                            <source data-src="./videos/spect_2.webm" type="video/webm">
+                            I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+                        </video>
+		    </section>
+		</section>
+
+		<section>Goldstone mode evolution</section>
+
+
+		<section>
+		    <section>Varying the pump power</section>
+                    <section>
+                        <video width="480" height="600" controls loop>
+                            <source data-src="./videos/gold.webm" type="video/webm">
+                            I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+                        </video>
+                    </section>
+		</section>
+
+		<section>
+		    <section>Varying the pump momentum</section>
+		    <section>
+			<h2>small ks</h2>
+                        <div class="container">
+                            <div style="float:left;width:49%">
+                                <video width="500" height="493" controls loop>
+                                    <source data-src="./videos/stab_small_ks.webm" type="video/webm">
+                                    I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+                                </video>
+                            </div>
+                            <div style="float:right;width:49%">
+                                <video width="480" height="600" controls loop>
+                                    <source data-src="./videos/gold_small_ks.webm" type="video/webm">
+                                    I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+                                </video>
+                            </div>
+                        </div>
+		    </section>
+		    <section>
+			<h2>large ks</h2>
+                        <div class="container">
+                            <div style="float:left;width:49%">
+                                <video width="500" height="493" controls loop>
+                                    <source data-src="./videos/stab_large_ks.webm" type="video/webm">
+                                    I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+                                </video>
+                            </div>
+                            <div style="float:right;width:49%">
+                                <video width="480" height="600" controls loop>
+                                    <source data-src="./videos/gold_large_ks.webm" type="video/webm">
+                                    I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+                                </video>
+                            </div>
+                        </div>
+		    </section>
+		</section>
+
+                <section>
+		    <section>Varying the signal momentum</section>
+		    <section>
+                        <img width="250" height="241" src="./images/stab_ks.png" alt="stab_ks.png" />
+                        <video width="480" height="600" controls loop>
+                            <source data-src="./videos/gold_ks.webm" type="video/webm">
+                            I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+                        </video>
+		    </section>
+		</section>
 
                 <section>
                     <img data-src="./images/fig_up_lp.svg">
