Testing header warning fix.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
 		    </p>
 		</section>
 
+                <section>
+                    <h2>This is a h2 heading</h2>
+                    <h3>This is a h3 heading</h3>
+                    <h4>This is a nice h4 heading</h4>
+                </section>
+                
 		<section>
+                  <h4>Polaritonic edge mode propagation</h4>
                     <video width="800" height="400" controls loop>
                         <source src="./videos/edge_mode.webm" type="video/webm">
                         <source src="./videos/edge_mode.mp4" type="video/mp4"/>
