Reorganized opo-extra slides.

--- a/index.html
+++ b/index.html
@@ -41,16 +41,7 @@
         </section>
 
         <section>
-          <h2>This is a h2 heading</h2>
-          <h3>This is a h3 heading</h3>
-          <h4>This is a nice h4 heading</h4>
-        </section>
-
-        <section>
-        </section>
-
-        <section>
-          <h4>Polaritonic edge mode propagation</h4>
+          <h4>Polaritonic edge mode propagation</h4> <!-- TODO: add headings to all sections. -->
           <video width="800" height="400" controls loop>
             <source src="./videos/edge_mode.webm" type="video/webm">
               <source src="./videos/edge_mode.mp4" type="video/mp4"/>
@@ -59,91 +50,89 @@
         </section>
 
 
-        <section>Types of instabilities</section>
-
         <section>
-          <section>Low pump powers</section>
-          <section>
-            <img width="416" height="402" src="./images/stab_1.png" alt="stability region ear" />
-            <video width="479" height="600" controls loop>
-              <source src="./videos/spect_1.webm" type="video/webm">
-                I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
-            </video>
-          </section>
+          <h3>Types of instabilities</h3>
         </section>
 
         <section>
-          <section>High pump powers</section>
-          <section>
-            <img width="250" height="241" src="./images/stab_2.png" alt="stability region mouth" />
-            <video width="479" height="600" controls loop>
-              <source src="./videos/spect_2.webm" type="video/webm">
-                I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
-            </video>
-          </section>
-        </section>
-
-        <section>Goldstone mode evolution</section>
-
-
-        <section>
-          <section>Varying the pump power</section>
-          <section>
-            <video width="480" height="600" controls loop>
-              <source src="./videos/gold.webm" type="video/webm">
-                I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
-            </video>
-          </section>
+          <h4>Low pump powers</h4>
+          <img width="416" height="402" src="./images/stab_1.png" alt="stability region ear" />
+          <video width="479" height="600" controls loop>
+            <source src="./videos/spect_1.webm" type="video/webm">
+              I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+          </video>
         </section>
 
         <section>
-          <section>Varying the pump momentum</section>
-          <section>
-            <h2>small ks</h2>
-            <div class="container">
-              <div style="float:left;width:49%">
-                <video width="500" height="493" controls loop>
-                  <source src="./videos/stab_small_ks.webm" type="video/webm">
-                    I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
-                </video>
-              </div>
-              <div style="float:right;width:49%">
-                <video width="480" height="600" controls loop>
-                  <source src="./videos/gold_small_ks.webm" type="video/webm">
-                    I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
-                </video>
-              </div>
+          <h4>High pump powers</h4>
+          <img width="250" height="241" src="./images/stab_2.png" alt="stability region mouth" />
+          <video width="479" height="600" controls loop>
+            <source src="./videos/spect_2.webm" type="video/webm">
+              I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+          </video>
+        </section>
+
+
+        <section>
+          <h3>Goldstone mode evolution</h3>
+        </section>
+
+
+
+        <!-- <section> -->
+        <!--   <h4>Varying the pump power</h4> -->
+        <!--   <video width="480" height="600" controls loop> -->
+        <!--     <source src="./videos/gold.webm" type="video/webm"> -->
+        <!--       I'm sorry; your browser doesn't support HTML5 video in WebM with VP8. -->
+        <!--   </video> -->
+        <!-- </section> -->
+
+        <section>
+          <h4>Varying the pump momentum</h4>
+          <div class="container">
+            <div style="float:left;width:49%">
+              <video width="500" height="493" controls loop>
+                <source src="./videos/stab_small_ks.webm" type="video/webm">
+                  I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+              </video>
             </div>
-          </section>
-          <section>
-            <h2>large ks</h2>
-            <div class="container">
-              <div style="float:left;width:49%">
-                <video width="500" height="493" controls loop>
-                  <source src="./videos/stab_large_ks.webm" type="video/webm">
-                    I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
-                </video>
-              </div>
-              <div style="float:right;width:49%">
-                <video width="480" height="600" controls loop>
-                  <source src="./videos/gold_large_ks.webm" type="video/webm">
-                    I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
-                </video>
-              </div>
+            <div style="float:right;width:49%">
+              <video width="480" height="600" controls loop>
+                <source src="./videos/gold_small_ks.webm" type="video/webm">
+                  I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+              </video>
             </div>
-          </section>
+          </div>
         </section>
+                  
+        <!-- <section> -->
+        <!--   <h4>large ks</h4> -->
+        <!--   <div class="container"> -->
+        <!--     <div style="float:left;width:49%"> -->
+        <!--       <video width="500" height="493" controls loop> -->
+        <!--         <source src="./videos/stab_large_ks.webm" type="video/webm"> -->
+        <!--           I'm sorry; your browser doesn't support HTML5 video in WebM with VP8. -->
+        <!--       </video> -->
+        <!--     </div> -->
+        <!--     <div style="float:right;width:49%"> -->
+        <!--       <video width="480" height="600" controls loop> -->
+        <!--         <source src="./videos/gold_large_ks.webm" type="video/webm"> -->
+        <!--           I'm sorry; your browser doesn't support HTML5 video in WebM with VP8. -->
+        <!--       </video> -->
+        <!--     </div> -->
+        <!--   </div> -->
+        <!-- </section> -->
+
 
         <section>
-          <section>Varying the signal momentum</section>
-          <section>
-            <img width="250" height="241" src="./images/stab_ks.png" alt="stability region teeth" />
-            <video width="480" height="600" controls loop>
-              <source src="./videos/gold_ks.webm" type="video/webm">
-                I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
-            </video>
-          </section>
+          <h4>Varying the signal momentum</h4>
+          <img width="250" height="241" src="./images/stab_ks.png" alt="stability region teeth" />
+          <video width="480" height="600" controls loop>
+            <source src="./videos/gold_ks.webm" type="video/webm">
+              I'm sorry; your browser doesn't support HTML5 video in WebM with VP8.
+          </video>
         </section>
+
 
         <section>
           <img src="./images/fig_up_lp.svg" alt="LP dispersion">
