added overlay watermark

--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
         <section>
           <h4>Polaritonic edge mode propagation</h4> <!-- TODO: add headings to all sections. -->
           <video width="800" height="400" controls loop>
-            <source src="./videos/edge_mode.webm" type="video/webm">
-              <source src="./videos/edge_mode.mp4" type="video/mp4"/>
-              I'm sorry; your browser doesn't support HTML5 video in WebM with VP8 or MP4 with H.264.
+            <source id='webm' src="./videos/edge_mode.webm" type="video/webm">
+              <source id='mp4' src="./videos/edge_mode.mp4" type="video/mp4">
+              <p>I'm sorry; your browser doesn't support HTML5 video in WebM with VP8 or MP4 with H.264.</p>
           </video>
+          <div id="overlay">Phys. Rev. X 5, 031001 (2015)</div>
         </section>
 
 
+        
         <section>
           <h3>Types of instabilities</h3>
         </section>
@@ -181,6 +183,10 @@
 
         <section>
           <img src="./images/opobox.svg" alt="OPO schematic">
+        </section>
+
+        <section>
+          <img src="./images/opo_vortices.png" alt="OPO GL vortices">
         </section>
 
         <section>
