Fixed attribution font size.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <source id='mp4' src="./videos/edge_mode.mp4" type="video/mp4">
               <p>I'm sorry; your browser doesn't support HTML5 video in WebM with VP8 or MP4 with H.264.</p>
           </video>
-          <span class="attribution">Phys. Rev. X 5, 031001 (2015)</span>
+         <small class="attribution">Phys. Rev. X 5, 031001 (2015)</small>
         </section>
 
 
