Added 2D cavity sketch and logo.

--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
 
         <section>
           <h3>Scattering and topological properties of driven-dissipative quantum fluids</h3>
-          <p>
-            <small><a href="mailto:berceanu@runbox.com">berceanu@runbox.com</a></small>
-          </p>
+          <p><small>berceanu@runbox.com</small></p>
+          <img src="./images/logo_uam.svg" alt="UAM logo">
         </section>
 
         <section>
-          <h4>Polaritonic edge mode propagation</h4> <!-- TODO: add headings to all sections. -->
+          <h4>Polaritonic edge mode propagation</h4>
           <video width="800" height="400" controls loop>
             <source id='webm' src="./videos/edge_mode.webm" type="video/webm">
               <source id='mp4' src="./videos/edge_mode.mp4" type="video/mp4">
@@ -179,6 +178,10 @@
 
         <section>
           <img src="./images/diff.svg" alt="negative drag waves">
+        </section>
+
+        <section>
+          <img src="./images/cavity_sketch.png" alt="microcavity schematic">
         </section>
 
         <section>
